# WoeUSB-ng-new

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  Makefile  PROJECT_UPDATE_SUMMARY.md  README.md  install.ps1  install.sh  makemenu.sh  pyproject.toml  quick-install.sh  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
WoeUSB/: miscellaneous.py
tests/: __init__.py  test_basic.py
