[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "WoeUSB-ng"
version = "0.2.13"
description = "WoeUSB-ng is a simple tool that enables you to create your own USB stick Windows installer from an ISO image or a real DVD. This is a rewrite of the original WoeUSB."
readme = "README.md"
license = "GPL-3.0-or-later"
authors = [
    {name = "Jakub Szymański", email = "jakubmateusz@poczta.onet.pl"},
    {name = "congelli501"},
    {name = "slacka"},
    {name = "WaxyMocha"},
]
maintainers = [
    {name = "Jakub Szymański", email = "jakubmateusz@poczta.onet.pl"},
]
keywords = ["windows", "usb", "installer", "iso", "dvd", "bootable"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Boot",
    "Topic :: System :: Installation/Setup",
    "Topic :: Utilities",
]
requires-python = ">=3.8"
dependencies = [
    "termcolor>=1.1.0",
    "wxPython>=4.1.0",
]

[project.urls]
Homepage = "https://github.com/WoeUSB/WoeUSB-ng"
Repository = "https://github.com/WoeUSB/WoeUSB-ng.git"
Issues = "https://github.com/WoeUSB/WoeUSB-ng/issues"
Documentation = "https://woeusb.github.io/WoeUSB-ng/"

[project.scripts]
woeusb = "WoeUSB.woeusb:main"
woeusbgui = "WoeUSB.woeusbgui:main"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.900",
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["WoeUSB*"]

[tool.setuptools.package-data]
WoeUSB = [
    "data/*",
    "locale/*/LC_MESSAGES/*",
]

[tool.black]
line-length = 120
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503"]
