[metadata]
name = WoeUSB-ng
version = attr: WoeUSB.miscellaneous.__version__
description = WoeUSB-ng is a simple tool that enables you to create your own USB stick Windows installer from an ISO image or a real DVD.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/WoeUSB/WoeUSB-ng
author = Jakub Szymański, congelli501, slacka, WaxyMocha
author_email = jakubmateusz@poczta.onet.pl
license = GPL-3.0-or-later
license_file = COPYING
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: X11 Applications :: GTK
    Intended Audience :: End Users/Desktop
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: System :: Boot
    Topic :: System :: Installation/Setup
    Topic :: Utilities

[options]
packages = find:
python_requires = >=3.8
install_requires =
    termcolor>=1.1.0
    wxPython>=4.1.0
include_package_data = True

[options.packages.find]
exclude = tests*

[options.extras_require]
dev =
    pytest>=6.0
    black>=22.0
    flake8>=4.0
    mypy>=0.900
    sphinx>=4.0
    sphinx-rtd-theme>=1.0

[options.entry_points]
console_scripts =
    woeusb = WoeUSB.woeusb:main
    woeusbgui = WoeUSB.woeusbgui:main

[flake8]
max-line-length = 120
extend-ignore = E203, W503
exclude = .git,__pycache__,build,dist,.venv

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
ignore_missing_imports = True
